--- a/coffee-shop/index.html
+++ b/coffee-shop/index.html
@@ -41,7 +41,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About</a>
@@ -181,7 +181,7 @@
                                     <img src="assets/img/product_1.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -205,7 +205,7 @@
                                     <img src="assets/img/product_2.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee Lavazza coffee Lavazza coffeeLavazza coffeeLavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee Lavazza coffee Lavazza coffeeLavazza coffeeLavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -229,7 +229,7 @@
                                     <img src="assets/img/product_1.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -253,7 +253,7 @@
                                     <img src="assets/img/product_1.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -277,7 +277,7 @@
                                     <img src="assets/img/product_2.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -301,7 +301,7 @@
                                     <img src="assets/img/product_1.png" alt="">
                                 </div>
                                 <div class="product-card-content">
-                                    <h3><a href="">Lavazza coffee</a></h3>
+                                    <h3><a href="product.html">Lavazza coffee</a></h3>
 
                                     <div class="product-card-details">
                                         <div class="product-price">
@@ -381,7 +381,7 @@
 
                     <div class="col-6 col-md-4">
                         <ul class="footer-menu list-unstyled">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">Menu</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Reservation</a></li>
