--- a/coffee-shop/cart.html
+++ b/coffee-shop/cart.html
@@ -149,7 +149,7 @@
                 <h1>Lavazza Crema E Gusto</h1>
 
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-lg-8">
                         <div class="cart-page-checkout">
                             <div class="cart-product-row">
 
@@ -229,7 +229,7 @@
                                 </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="product-page-actions"> 
                             <h5 class="cart-summary-title">
                                 <span>cart summary</span>
