--- a/positivus/index.html
+++ b/positivus/index.html
@@ -575,14 +575,127 @@
                 </div>
             </header>
             <div class="section__body">
-                <div class="owl-carousel owl-theme">
-                    <div class="item"><img src="images/slider/1.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/2.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/3.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/4.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/4.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/4.jpg" alt=""></div>
-                    <div class="item"><img src="images/slider/4.jpg" alt=""></div>
+                <div class="reviews">
+                    <div class="reviews__slider owl-carousel owl-theme">
+                        <div class="reviews__item">
+                            <div class="review-card">
+                                <div class="review-card__body">
+                                    <p>"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
+                                </div>
+                                <footer class="review-card__footer">
+                                    <cite class="review-card__name">John Smith</cite>
+                                    <cite class="review-card__company">Marketing Director at XYZ Corp</cite>
+                                </footer>
+                            </div>
+                        </div>
+                        <div class="reviews__item">
+                            <div class="review-card">
+                                <div class="review-card__body">
+                                    <p>"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
+                                </div>
+                                <footer class="review-card__footer">
+                                    <cite class="review-card__name">John Smith</cite>
+                                    <cite class="review-card__company">Marketing Director at XYZ Corp</cite>
+                                </footer>
+                            </div>
+                        </div>
+                        <div class="reviews__item">
+                            <div class="review-card">
+                                <div class="review-card__body">
+                                    <p>"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
+                                </div>
+                                <footer class="review-card__footer">
+                                    <cite class="review-card__name">John Smith</cite>
+                                    <cite class="review-card__company">Marketing Director at XYZ Corp</cite>
+                                </footer>
+                            </div>
+                        </div>
+                        <div class="reviews__item">
+                            <div class="review-card">
+                                <div class="review-card__body">
+                                    <p>"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
+                                </div>
+                                <footer class="review-card__footer">
+                                    <cite class="review-card__name">John Smith</cite>
+                                    <cite class="review-card__company">Marketing Director at XYZ Corp</cite>
+                                </footer>
+                            </div>
+                        </div>
+                        <div class="reviews__item">
+                            <div class="review-card">
+                                <div class="review-card__body">
+                                    <p>"We have been working with Positivus for the past year and have seen a significant increase in website traffic and leads as a result of their efforts. The team is professional, responsive, and truly cares about the success of our business. We highly recommend Positivus to any company looking to grow their online presence."</p>
+                                </div>
+                                <footer class="review-card__footer">
+                                    <cite class="review-card__name">John Smith</cite>
+                                    <cite class="review-card__company">Marketing Director at XYZ Corp</cite>
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="reviews__actions">
+
+                        <button class="reviews__arrow-button reviews__arrow-button--rotate">
+                            <span class="visually-hidden">Previous slide</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 10.5C1.17157 10.5 0.5 11.1716 0.5 12C0.5 12.8284 1.17157 13.5 2 13.5L2 10.5ZM23.0607 13.0607C23.6464 12.4749 23.6464 11.5251 23.0607 10.9393L13.5147 1.3934C12.9289 0.807613 11.9792 0.807613 11.3934 1.3934C10.8076 1.97919 10.8076 2.92893 11.3934 3.51472L19.8787 12L11.3934 20.4853C10.8076 21.0711 10.8076 22.0208 11.3934 22.6066C11.9792 23.1924 12.9289 23.1924 13.5147 22.6066L23.0607 13.0607ZM2 13.5L22 13.5L22 10.5L2 10.5L2 13.5Z" fill="white"/>
+                            </svg>
+                        </button>
+
+                        <div class="reviews__pagination owl-dots">
+                            <ul class="reviews__pagination-list">
+                                <li class="reviews__pagination-item">
+                                    <button role="button" class="pagination__button is-current" type="button">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.0099 2.05941L14 0L11.9604 7.0099L14 14L7.0099 11.9604L0 14L2.05941 7.0099L0 0L7.0099 2.05941Z" fill="white"/>
+                                            </svg>
+                                            <span class="visually-hidden">First slide</span>
+                                    </button>
+                                </li>
+                                <li class="reviews__pagination-item">
+                                    <button role="button" class="pagination__button" type="button">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.0099 2.05941L14 0L11.9604 7.0099L14 14L7.0099 11.9604L0 14L2.05941 7.0099L0 0L7.0099 2.05941Z" fill="white"/>
+                                            </svg>
+                                            <span class="visually-hidden">Second slide</span>
+                                    </button>
+                                </li>
+                                <li class="reviews__pagination-item">
+                                    <button role="button" class="pagination__button" type="button">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.0099 2.05941L14 0L11.9604 7.0099L14 14L7.0099 11.9604L0 14L2.05941 7.0099L0 0L7.0099 2.05941Z" fill="white"/>
+                                            </svg>
+                                            <span class="visually-hidden">Third slide</span>
+                                    </button>
+                                </li>
+                                <li class="reviews__pagination-item">
+                                    <button role="button" class="pagination__button" type="button">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.0099 2.05941L14 0L11.9604 7.0099L14 14L7.0099 11.9604L0 14L2.05941 7.0099L0 0L7.0099 2.05941Z" fill="white"/>
+                                            </svg>
+                                            <span class="visually-hidden">Fouth slide</span>
+                                    </button>
+                                </li>
+                                <li class="reviews__pagination-item">
+                                    <button role="button" class="pagination__button" type="button">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.0099 2.05941L14 0L11.9604 7.0099L14 14L7.0099 11.9604L0 14L2.05941 7.0099L0 0L7.0099 2.05941Z" fill="white"/>
+                                            </svg>
+                                            <span class="visually-hidden">Fifth slide</span>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <button class="reviews__arrow-button">
+                            <span class="visually-hidden">Next slide</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 10.5C1.17157 10.5 0.5 11.1716 0.5 12C0.5 12.8284 1.17157 13.5 2 13.5L2 10.5ZM23.0607 13.0607C23.6464 12.4749 23.6464 11.5251 23.0607 10.9393L13.5147 1.3934C12.9289 0.807613 11.9792 0.807613 11.3934 1.3934C10.8076 1.97919 10.8076 2.92893 11.3934 3.51472L19.8787 12L11.3934 20.4853C10.8076 21.0711 10.8076 22.0208 11.3934 22.6066C11.9792 23.1924 12.9289 23.1924 13.5147 22.6066L23.0607 13.0607ZM2 13.5L22 13.5L22 10.5L2 10.5L2 13.5Z" fill="white"/>
+                            </svg>
+                        </button>
+
+                    </div>
                 </div>
             </div>
         </section>
